--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve -s build",
-    "prestart": "npm install -g serve",
-    "local": "react-scripts start",
+    "start": "react-scripts start",
+    "static": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
